--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,175 @@
-.App {
+*, ::before, ::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f7f1f1a7;
+}
+
+.container-grille {
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: auto 1fr auto;
+}
+
+header {
+  grid-column: span 3;
+  padding: 30px;
   text-align: center;
+  font-size: 22px;
+  color: rgb(70, 64, 183);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.liste-sidenav {
+  list-style-type: none;
+  max-height: 650px;
   display: flex;
   flex-direction: column;
+}
+
+.liste-sidenav li {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin: 2.5px 0 5px 2.5px;
+  padding-left: 5px;
+  transition: all 300ms ease-in-out;
+}
+
+.liste-sidenav li:hover {
+  border-left: solid 5px #6E92A6;
+  background-color: #6e92a622;
+  color: #f9f9f9;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+.liste-sidenav li a {
+  font-size: 18px;
+  color:#665f5f;
+  text-decoration: none;
+}
+
+main {
+  padding: 0 20px;
+  min-height: 150vh;
+}
+
+.container-car {
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.container-car .bloc-car{
+  margin: 15px 10px;
+  text-decoration: none;
+  color: #665f5f;
+  background-color: rgb(255, 255, 255);
+  border-radius: .8rem;
+  box-shadow: -9px 14px 23px -6px rgba(96,96,96,0.26);
+  -webkit-box-shadow: -9px 14px 23px -6px rgba(96,96,96,0.26);
+  -moz-box-shadow: -9px 14px 23px -6px rgba(96,96,96,0.26);
+  display: grid;
+  grid-template-rows: 1fr 85px;
+  transition: all 300ms ease-in-out;
+}
+
+.container-car .bloc-car:hover{
+  box-shadow: none;
+  cursor: pointer;
+}
+.container-car .bloc-car img{
+  border-radius: 0.8rem .8rem 0 0 ;
+}
+
+.container-car .bloc-car .img-car{
+  margin: auto;
+}
+
+.container-car .bloc-car .description-car{
+  padding-left: 5px;
+}
+
+.container-caracteristics {
+  display: grid;
+  grid-template-columns: 1fr .5fr;
+  grid-template-rows: 1fr;
+}
+
+.container-caracteristics .caroussel-car img{
+  border-radius: .7rem;
+  box-shadow: -9px 14px 23px -6px rgb(181, 21, 21);
+  -webkit-box-shadow: -9px 14px 23px -6px rgba(96,96,96,0.26);
+  -moz-box-shadow: -9px 14px 23px -6px rgba(96,96,96,0.26);
+}
+
+.container-caracteristics .box-carac{
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container-caracteristics .box-carac .carac{
+  background-color: rgb(255, 255, 255);
+  /* border: solid 2px rgb(53, 49, 49); */
+  border-radius: .7rem;
+  margin: 0 0 0 10px;
+  padding: 15px;
+  z-index: 999;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-caracteristics .box-carac .carac p{
+  line-height: 1.5;
 }
+
+.desc-car{
+  margin-top: 2rem;
+}
+
+h1{
+  margin-bottom: 15px;
+  font-size: 35px;
+}
+
+footer {
+  grid-column: span 3;
+  padding: 30px;
+  text-align: center;
+  font-size: 20px;
+  background-color: #be9999;
+  color: #f1f1f1;
+}
+
+/* @media screen and (max-width: 1000px){
+  
+  .container-grille {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .liste-sidenav {
+      flex-direction: row;
+      justify-content: center;
+  }
+
+  .liste-sidenav li {
+      margin: 0 10px;
+  }
+
+  main p {
+      min-height: 600px;
+  }
+
+  aside p {
+      height: auto;
+  } 
+}*/
